[gd_scene load_steps=9 format=3 uid="uid://7kl36sufhxfc"]

[ext_resource type="FontFile" uid="uid://b81fl2dgtf6jo" path="res://assetsnew/font/titulos.ttf" id="1_huusl"]
[ext_resource type="Script" uid="uid://bb3ks8ktf1byf" path="res://cenas/start_screen.gd" id="1_xy6fg"]
[ext_resource type="FontFile" uid="uid://5wbtgsib3sx8" path="res://assetsnew/font/perguntas.ttf" id="2_whx1l"]
[ext_resource type="AudioStream" uid="uid://ua8qryte1rnl" path="res://MathRun Files/musictheme.mp3" id="4_unj74"]
[ext_resource type="Texture2D" uid="uid://bf8y8sdr0iggc" path="res://assetsnew/Pixel SHMUP Free/Space Background/stars_2.png" id="5_ssgsn"]
[ext_resource type="Texture2D" uid="uid://b2mjqh0edx5oa" path="res://MathRun Files/2af3443ed767f1f05b2969a9494807b0.png" id="7_ttwfx"]
[ext_resource type="Texture2D" uid="uid://7dcqjx4cw2vr" path="res://assetsnew/step_1.png" id="8_c463w"]
[ext_resource type="Theme" uid="uid://go6p0urqppsl" path="res://theme_button.tres" id="8_g4beb"]

[node name="Node" type="Node"]
script = ExtResource("1_xy6fg")

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = 97.0
offset_top = 108.0
offset_right = 1020.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("1_huusl")
theme_override_font_sizes/font_size = 100
text = "Conjuntron"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 1
offset_left = 501.0
offset_top = 220.0
offset_right = 1006.0
offset_bottom = 271.0
theme_override_fonts/font = ExtResource("2_whx1l")
theme_override_font_sizes/font_size = 50
text = "Contas c√≥smicas"

[node name="Button" type="Button" parent="."]
z_index = 1
offset_left = 469.0
offset_top = 484.0
offset_right = 651.0
offset_bottom = 543.0
theme = ExtResource("8_g4beb")
theme_override_fonts/font = ExtResource("2_whx1l")
theme_override_font_sizes/font_size = 50
text = "START"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(469, 484)
stream = ExtResource("4_unj74")

[node name="Stars2" type="Sprite2D" parent="."]
position = Vector2(298.5, 322.5)
scale = Vector2(2.14444, 1.32708)
texture = ExtResource("5_ssgsn")

[node name="Stars3" type="Sprite2D" parent="."]
position = Vector2(871, 329.5)
scale = Vector2(2.11852, 1.36042)
texture = ExtResource("5_ssgsn")

[node name="Planetas" type="Sprite2D" parent="."]
position = Vector2(931, 463)
scale = Vector2(0.4, 0.428)
texture = ExtResource("7_ttwfx")

[node name="Background" type="Sprite2D" parent="."]
z_index = -7
position = Vector2(581, 322.5)
scale = Vector2(1.80938, 1.80833)
texture = ExtResource("8_c463w")

[node name="Easy" type="Button" parent="."]
offset_left = 91.0
offset_top = 426.0
offset_right = 181.0
offset_bottom = 463.0
theme = ExtResource("8_g4beb")
theme_override_fonts/font = ExtResource("2_whx1l")
theme_override_font_sizes/font_size = 25
text = "Easy"

[node name="Label3" type="Label" parent="."]
offset_left = 32.0
offset_top = 375.0
offset_right = 247.0
offset_bottom = 424.0
theme_override_fonts/font = ExtResource("2_whx1l")
theme_override_font_sizes/font_size = 35
text = "Difficulty:"

[node name="Hard" type="Button" parent="."]
offset_left = 88.0
offset_top = 474.0
offset_right = 180.0
offset_bottom = 506.0
theme = ExtResource("8_g4beb")
theme_override_fonts/font = ExtResource("2_whx1l")
theme_override_font_sizes/font_size = 25
text = "Hard"
text_overrun_behavior = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
